# GDS9

./: .gitignore  CMakeLists.txt  README.md
src/: centralwidget.cpp  centralwidget.h  centralwidget.ui  controller.cpp  controller.h  dataacqsettingwindow.cpp  dataacqsettingwindow.h  dataacqsettingwindow.ui  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwindow.cpp  openglwindow.h  openglwindow.ui  settings.cpp  settings.h  settings.ui  test.cpp
src/data_acquisition/: CMakeLists.txt  README.md  axiscontrol.h  command.h  command_queue.h  detection_proxy.cpp  detection_proxy.h  main.cpp  motion_proxy.cpp  motion_proxy.h  util.h
src/dataacquistion/: DataAcquistion.cpp  DataAcquistion.h
src/efficiency_calculation/: CMakeLists.txt  Calculation.cpp  Calculation.h  CellCalculation.cpp  CellCalculation.h  DECalculation.cpp  DECalculation.h  DEPost.cpp  DEPost.h  MA_Coef.cpp  MA_Coef.h  TriData.cpp  TriData.h  main.cpp
src/reconstruction/: CMakeLists.txt  gridCal.cpp  gridCal.h  main.cpp  reconstruction.cpp  reconstruction.h
src/tests/: CMakeLists.txt  testReconstruction.cpp  test_data_acquisition.cpp  test_efficiency_calculation.cpp  test_reconstruction.cpp
temp/lib/pkgconfig/: spdlog.pc
